Add env variables

--- a/.env.default
+++ b/.env.default
@@ -19,3 +19,7 @@ GITHUB_URL='https://github.com'
 GITHUB_AUTHENTICATION=true
 GITHUB_ACCESS_SCOPE='[repo]'
 DEVISE_MODULES='[database_authenticatable,recoverable,rememberable,trackable,validatable,omniauthable]'
+SMTP_SERVER='smtp.sendgrid.net'
+SMTP_PORT=25
+EMAIL_DELIVERY_METHOD='smtp'
+SMTP_AUTHENTICATION=plain
